<resources>
    <string name="app_name">CalculadoraBasica</string>
    <string name="digite_o_primeiro_numero">Digite o Primeiro Numero</string>
    <string name="embranco"></string>
    <string name="digite_o_segundo_numero">Digite o Segundo Numero</string>
    <string name="somar">Somar</string>
    <string name="subtrarir">Subtrarir</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
</resources>